# mailpush

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT_PROGRESS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/: config.example.json  entrypoint.sh
mailpush/: __init__.py  __main__.py  cli.py  config.py  filter.py  imap.py  models.py  processor.py  server.py  smtp.py  summarizer.py  translator.py  webhook.py
mailpush/api/: __init__.py  schemas.py  server.py
mailpush/api/routes/: __init__.py  accounts.py  deliveries.py  emails.py  health.py  notify.py  routes_api.py
mailpush/api/templates/: dashboard.html
mailpush/core/: __init__.py  config.py  events.py  security.py  templates.py
mailpush/delivery/: __init__.py  bark.py  base.py  command.py  discord.py  dispatcher.py  hermes.py  http.py  ntfy.py  openclaw.py  slack.py  telegram.py  webhook.py
mailpush/mail/: __init__.py  filter.py  imap.py  parser.py  proxy_imap.py  smtp.py  summarizer.py  translator.py
mailpush/static/: app.js  index.html  style.css
