[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailpush"
version = "1.0.0"
description = "Real-time email push CLI — IMAP IDLE monitoring, webhook dispatch, REST API for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "aioimaplib>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "pyyaml>=6.0",
]

[project.scripts]
mailpush = "mailpush.cli:main"

[project.urls]
Homepage = "https://github.com/fkdls112/mailpush"
Documentation = "https://github.com/fkdls112/mailpush#readme"

[tool.hatch.build.targets.wheel]
packages = ["mailpush"]
